--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <!-- Include WebTorrent library -->
     <script src="https://cdn.jsdelivr.net/npm/webtorrent@2/webtorrent.min.js"></script>
 </head>
-<body class="bg-primary-dark text-primary-text min-h-screen flex flex-col items-center pt-8 md:pt-16 px-4">
+<body class="bg-primary-dark text-primary-text font-sans antialiased min-h-screen flex flex-col items-center pt-8 md:pt-16 px-4">
 
     <div id="drop-zone" class="w-full max-w-3xl transition-all duration-300 ease-in-out">
 
