--- a/index.html
+++ b/index.html
@@ -44,17 +44,14 @@
 
         <div id="player" class="content-box">
             <h2>Streaming Player</h2>
-            <!-- Video/Audio tags will be appended here -->
         </div>
     </main>
 
     <footer>
         <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent</a></p>
     </footer>
-
-    <!-- Include WebTorrent library from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
-    <!-- Include your custom script -->
+    <script src="path/to/your/videostream.browser.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
