--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <h1>Torrent Web Client</h1>
-        <!-- Maybe add a logo or subtitle here later -->
+        <img src="logo.jpg" alt="My Torrent Client Logo" class="logo-image"> 
+        <h1>Your personal Torrent Web Client</h1>
     </header>
 
     <section class="hero">
@@ -48,7 +48,7 @@
     </main>
 
     <footer>
-        <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent</a></p>
+        <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent.</a>Designed and Developed by<a href="https://github.com/devilGamer5802" target="_blank" rel="noopener noreferrer">devilGamer5802</a>a</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
     <script src="path/to/your/videostream.browser.js"></script>
