--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.jpg" alt="My Torrent Client Logo" class="logo-image"> 
+        <img src="logo.png" alt="My Torrent Client Logo" class="logo-image"> 
         <h1>Your personal Torrent Web Client</h1>
     </header>
 
