--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TorDirect</title>
+    <title>Torrent Web Client</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +11,8 @@
 </head>
 <body>
     <header>
-        <h1>Your personal Torrent Web Client</h1>
+        <h1>Torrent Web Client</h1>
+        <!-- Maybe add a logo or subtitle here later -->
     </header>
 
     <section class="hero">
@@ -43,14 +44,17 @@
 
         <div id="player" class="content-box">
             <h2>Streaming Player</h2>
+            <!-- Video/Audio tags will be appended here -->
         </div>
     </main>
 
     <footer>
-        <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent.</a>Designed and Developed by<a href="https://github.com/devilGamer5802" target="_blank" rel="noopener noreferrer">devilGamer5802</a>a</p>
+        <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent</a></p>
     </footer>
+
+    <!-- Include WebTorrent library from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
-    <script src="path/to/your/videostream.browser.js"></script>
+    <!-- Include your custom script -->
     <script src="script.js"></script>
 </body>
 </html>
