--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Torrent Web Client</title>
+    <title>Your Personal Torrent Web Client</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <img src="logo.png" class="logo-image">
         <h1>Torrent Web Client</h1>
         <!-- Maybe add a logo or subtitle here later -->
     </header>
@@ -49,7 +50,7 @@
     </main>
 
     <footer>
-        <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent</a></p>
+        <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent.</a><a href=""></p>
     </footer>
 
     <!-- Include WebTorrent library from CDN -->
