--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" class="logo-image">
-        <h1>Torrent Web Client</h1>
+        <img src="logo.png" alt="My Torrent Client - Logo and Title" class="logo-image">
+        <h1>Your Personal Torrent Web Client</h1>
         <!-- Maybe add a logo or subtitle here later -->
     </header>
 
@@ -45,12 +45,13 @@
 
         <div id="player" class="content-box">
             <h2>Streaming Player</h2>
+            <h3>Broken due to webtorrent latest api.</h3>h3
             <!-- Video/Audio tags will be appended here -->
         </div>
     </main>
 
     <footer>
-        <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent.</a><a href=""></p>
+        <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent. Designed and developed by</a><a href="https://github.com/devilGamer5802">devilGamer5802</a>a</p>
     </footer>
 
     <!-- Include WebTorrent library from CDN -->
