--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 
         <div id="player" class="content-box">
             <h2>Streaming Player</h2>
-            <h3>Broken due to webtorrent latest api. Stay updated for this fix.</h3>
+            <h3>Broken due to webtorrent latest api. Stay updated for the fix.</h3>
             <!-- Video/Audio tags will be appended here -->
         </div>
     </main>
 
     <footer>
-        <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent. Designed and developed by </a><a href="https://github.com/devilGamer5802">devilGamer5802</a></p>
+        <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent</a>. Designed and developed by <a href="https://github.com/devilGamer5802">devilGamer5802</a></p>
     </footer>
 
     <!-- Include WebTorrent library from CDN -->
