--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div id="player" class="content-box">
             <h2>Streaming Player</h2>
-            <h3>Broken due to webtorrent latest api. Stay updated for the fix.</h3>
+            <h3 style="color:Red;">WARNING!!!!Broken due to webtorrent latest api. Stay updated for the fix.</h3>
             <!-- Video/Audio tags will be appended here -->
         </div>
     </main>
