--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- Include WebTorrent library from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
-    <!-- Include your custom script -->
+    <script src="path/to/your/videostream.browser.js"></script> 
     <script src="script.js"></script>
 </body>
 </html>
