--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <img src="logo.png" alt="My Torrent Client - Logo and Title" class="logo-image">
-        <h1>Your Personal Torrent Web Client</h1>
+        <h1>TorDirect - Your Personal Torrent Web Client</h1>
         <!-- Maybe add a logo or subtitle here later -->
     </header>
 
