--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </footer>
 
     <!-- Include WebTorrent library from CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/webtorrent@2.6.3/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/webtorrent@2.6.3/webtorrent.min.js"></script>
     <script src="videostream.js"></script>
     <script src="script.js"></script>
 </body>
