--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
     </footer>
 
     <!-- Include WebTorrent library from CDN -->
-    <script src="https://unpkg.com/webtorrent@latest/webtorrent.min.js"></script>
-    <script src="videostream.js"></script>
+    <script src="https://unpkg.com/webtorrent@1.9.10/webtorrent.min.js"></script> 
     <script src="script.js"></script>
 </body>
 </html>
