--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     </footer>
 
     <!-- Include WebTorrent library from CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/webtorrent@2.6.3/index.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
