--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- Include WebTorrent library from CDN -->
     <!--<script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/webtorrent@2.6.3/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/webtorrent@2.6.3/dist/webtorrent.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
