--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 
         <div id="player" class="content-box">
             <h2>Streaming Player</h2>
-            <h3 style="color:Red;">WARNING!!!!Broken due to webtorrent latest api. Stay updated for the fix.</h3>
             <!-- Video/Audio tags will be appended here -->
         </div>
     </main>
@@ -54,8 +53,9 @@
         <p>Powered by <a href="https://webtorrent.io/" target="_blank" rel="noopener noreferrer">WebTorrent</a>. Designed and developed by <a href="https://github.com/devilGamer5802">devilGamer5802</a></p>
     </footer>
 
-    <!-- Include WebTorrent library from CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
+    <!-- Include specific WebTorrent library version (pinned to v2.8.4) -->
+    <script src="https://cdn.jsdelivr.net/npm/webtorrent@2.8.4/webtorrent.min.js"></script>
+    <!-- Your main application script (already updated to work with modern WebTorrent) -->
     <script src="script.js"></script>
 </body>
 </html>
